--- a/AuctionApp/AuctionApp-war/web/index.html
+++ b/AuctionApp/AuctionApp-war/web/index.html
@@ -6,12 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Home</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Welcome EJB World!!</div>
-        <a href="ComunicationTestServlet">Go to ComunicationTestServlet</a>
+        <h1>Home Auction App</h1>
+        <a href="ComunicationTestServlet">ComunicationTestServlet</a>
     </body>
 </html>
